--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:sunil.k.sahoo@gmail.com">sunil.k.sahoo@gmail.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/sunil-kumar-sahoo-4b477a19/" target="_blank">linkedin.com/in/sunil-kumar-sahoo-4b477a19</a></p>
-            <p>GitHub: <a href="https://github.com/kiranacharya" target="_blank">github.com/sunilksahoo</a></p>
+            <p>GitHub: <a href="https://github.com/sunilksahoo" target="_blank">github.com/sunilksahoo</a></p>
         </div>
 
         <div class="section">
